GTLC - 1: Header - Desktop Bring “Chance of Showers” closer to the temperature reading -Done Match “Chance of Showers” text size to PNG - Font weight set to 100, the thinnest setting. The font used is Georgia, if the user has that font installed. If this does not match well enough, purchasing the Georgia webfont may fix the issue. As it is, the font weight cannot go any lower. http://www.fonts.com/font/microsoft-corporation/georgia?QueryFontType=We b&src=GoogleWebFonts FUTURE ITEMS (after pages built): On click, logo will link back to the home page Display social media facebook.com/grandtetonlodgeco and twitter.com/tetontales --- Added. Content Manage if the weather widget displays GTLC - 53: Header - Tablet GTLC - 29: Header - Mobile Plank not proper size - Increase and move to the right - If you mean the logo, please see comments on weather below. No weather displayed - There is not enough room to keep the temperature on the screen at the smallest width, so we must decide what needs to scale down if we intend to keep the temperature there at that width. Hamburger too large - Appears the same size as the PSD, Image on the ticket is scaled down and differs from the actual design. The below is a comparison between the site and the PSD. In both cases the topbar is 100 pixels high. If this needs changed, the designer needs to give us those dimensions.
GTLC - 5: Hero: Desktop
Remove Pause and Play buttons in top right hand corner -- removed
Move left and right arrows closer to center -- done, small excluded.
By default show faded arrows.
On hover of image, display arrows at 100% -- Done
Gradient behind Title and Link incorrect-- gradient added along with
mobile

 Pause auto rotation when cursor is over image - Done.
GTLC - 31: Hero: Mobile
Image size is not correct - This should be good, work was done to keep
this at 670 width on small and many styles written for this.
No arrows appear - Arrows appear, unable to reproduce.
Text overlay on first image takes up too much s

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -15,7 +15,45 @@
   }
 }
 
+.orbit-container .orbit-slides-container > * .orbit-caption {
+  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(0,0,0,0.99) 99%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(99%,rgba(0,0,0,0.99)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.99) 99%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.99) 99%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.99) 99%,rgba(0,0,0,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.99) 99%,rgba(0,0,0,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+}
+
 @media #{$small-only} {
+
+
+
+
+
+  .orbit-container ul li img, .orbit-container ul li {
+    min-height: 670px;
+    min-width: 1295px;
+    overflow: hidden;
+  }
+  .orbit-container .orbit-slides-container > * .orbit-caption {
+    z-index: 100;
+    width: 100vw;
+  }
+  .orbit-container ul li img { width: 100%; }
+
+  .orbit-container ul li:nth-of-type(1) img {
+    margin-left: -463px;
+  }
+  .orbit-container ul li:nth-of-type(2) img {
+    margin-left: -600px;
+  }
+  .orbit-container ul li:nth-of-type(3) img {
+    margin-left: -552px;
+  }
+  .orbit-container ul li:nth-of-type(4) img {
+    margin-left: -466px;
+  }
   .weather_temp {
     color: $white;
     font-weight: 600;
@@ -232,11 +270,13 @@
 
   .weather_desc {
     font-family: $font-family-serif;
+    font-weight: 100;
     font-size: 9pt;
     color: $white;
     letter-spacing: 0.04rem;
     line-height: 0.9rem;
     padding-top: 0.2rem;
+    margin-left: 10px;
   }
   .weather_cur {
     color: $white;
@@ -244,6 +284,14 @@
   
   .featured-wrapper .orbit-next span, .featured-wrapper .orbit-prev span{
     left: 0;
+  }
+
+  .hero-orbit .orbit-prev {
+    left: 15px;
+  }
+
+  .hero-orbit .orbit-next {
+    padding-right: 50px;
   }
 }
 
@@ -575,7 +623,7 @@
 ////////////////////////////////////////////////
 // Hero Orbit Related.
 .hero-orbit .orbit-prev {
-  background: url("../assets/orbit/orbitleft.png");
+  background: url("../assets/orbit/orbitleft.png") no-repeat;
   width: 34px !important;
   height: 84px !important;
 
@@ -585,10 +633,9 @@
 }
 
 .hero-orbit .orbit-next {
-  background: url("../assets/orbit/orbitright.png");
+  background: url("../assets/orbit/orbitright.png") no-repeat;
   width: 34px !important;
   height: 84px !important;
-
   span {
     border: 0;
   }
@@ -648,7 +695,9 @@
 ////////////////////////////////////////////////
 // THESE ARE GENERALIZED STYLES TO BE USED ANYWHERE.
 
-
+.orbit-container .orbit-timer{
+  display:none;
+}
 
 
 
